# atsamd

./: Cargo.toml  manage.toml
.github/workflows/: build-bsp.yml  check-examples.yml
atsamd-hal-macros/src/: lib.rs
boards/atsame54_xpro/: CHANGELOG.md
boards/examples/: m4-async_dmac.rs
boards/feather_m0/: CHANGELOG.md  Cargo.toml
boards/feather_m0/examples/: blinky_basic.rs  clock.rs  pwm.rs  usb_echo.rs
boards/feather_m0/examples/bsp/: mod.rs
boards/feather_m4/: CHANGELOG.md  Cargo.toml
boards/feather_m4/examples/: async_dmac.rs  blinky_basic.rs
boards/grand_central_m4/: Cargo.toml
boards/grand_central_m4/examples/: async_dmac.rs
boards/itsybitsy_m0/examples/: README.md
boards/itsybitsy_m4/: CHANGELOG.md
boards/metro_m0/: CHANGELOG.md  Cargo.toml
boards/metro_m0/examples/: blinky_basic.rs  blinky_rtic.rs  i2s.rs  usb_echo.rs
boards/metro_m0/examples/bsp/: mod.rs
boards/metro_m0/src/: lib.rs
boards/metro_m4/: CHANGELOG.md
boards/metro_m4/examples/: async_dmac.rs  blinky_basic.rs  blinky_complicated.rs  usb_logging.rs
boards/pygamer/: CHANGELOG.md
boards/pyportal/: CHANGELOG.md
boards/samd11_bare/: CHANGELOG.md
boards/samd21_boards/: Cargo.toml  build.rs
boards/samd21_boards/src/: feather_m0.rs  lib.rs  metro_m0.rs
boards/trinket_m0/examples/: eic.rs
boards/wio_terminal/src/: buttons.rs
examples/: README.md  examples.toml  m4-blinky_basic.rs  metro_m4-usb_echo2.rs
examples/usb-echo/: Cargo.toml  build.rs
examples/usb-echo/src/: main.rs
hal/: CHANGELOG.md  Cargo.toml
hal/src/: i2s.rs  lib.rs  prelude.rs
hal/src/clock/: v1_thumbv6m.rs  v1_thumbv7em.rs  v2.rs
hal/src/clock/v2/: ahb.rs  apb.rs  dpll.rs  gclk.rs  osc32k.rs  osculp32k.rs  pclk.rs  rtcosc.rs  (+2 more)
hal/src/common/: mod.rs
hal/src/gpio/: dynpin.rs  pin.rs
hal/src/sercom/: spi.rs  uart.rs
hal/src/thumbv6m/: clock.rs  mod.rs
manage/: Cargo.toml
manage/src/: error.rs  example.rs  main.rs
pac/atsamd11c/: CHANGELOG.md
pac/atsamd11d/: CHANGELOG.md
pac/atsamd21e/: CHANGELOG.md
pac/atsamd21g/: CHANGELOG.md
pac/atsamd21j/: CHANGELOG.md
pac/atsamd51g/: CHANGELOG.md
pac/atsamd51j/: CHANGELOG.md
pac/atsamd51n/: CHANGELOG.md
pac/atsamd51p/: CHANGELOG.md
pac/atsame51g/: CHANGELOG.md
pac/atsame51j/: CHANGELOG.md
pac/atsame51n/: CHANGELOG.md
pac/atsame53j/: CHANGELOG.md
pac/atsame53n/: CHANGELOG.md
pac/atsame54n/: CHANGELOG.md
pac/atsame54p/: CHANGELOG.md
samd11c/: .rustc_info.json
samd11c/thumbv6m-none-eabi/doc/: search-index.js
samd11d/: .rustc_info.json
samd11d/thumbv6m-none-eabi/doc/: search-index.js
samd21g/: .rustc_info.json
samd21g/thumbv6m-none-eabi/doc/: search-index.js
samd21j/: .rustc_info.json
samd21j/thumbv6m-none-eabi/doc/: search-index.js
samd51g/: .rustc_info.json
samd51g/thumbv7em-none-eabihf/doc/: search-index.js
samd51j/thumbv7em-none-eabihf/doc/: search-index.js
samd51n/: .rustc_info.json
samd51n/thumbv7em-none-eabihf/doc/: search-index.js
samd51p/: .rustc_info.json
samd51p/thumbv7em-none-eabihf/doc/: search-index.js
(+5296 files in other folders)
