[package]
authors = ["Ben Bergman <ben@benbergman.ca>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Board Support crate for SAMD21 examples"
edition = "2021"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal"]
license = "MIT OR Apache-2.0"
name = "samd21_boards"
readme = "README.md"
repository = "https://github.com/atsamd-rs/atsamd"
resolver = "2"
version = "0.18.1"

# for cargo flash
[package.metadata]
chip = "ATSAMD21G18A"

[dependencies.cortex-m-rt]
optional = true
version = "0.7"

[dependencies.atsamd-hal]
default-features = false
path = "../../hal"
version = "0.21.0"

[dependencies.cortex-m]
features = ["critical-section-single-core"]
version = "0.7"

[dependencies.rtic]
features = ["thumbv6-backend"]
optional = true
version = "2.1.1"

[dependencies.usb-device]
optional = true
version = "0.3.1"

[dependencies.embedded-sdmmc]
optional = true
version = "0.3"

[features]
# ask the HAL to enable atsamd21g support
default = ["rt", "atsamd-hal/samd21g"]
rt = ["cortex-m-rt", "atsamd-hal/samd21g-rt"]
usb = ["atsamd-hal/usb", "usb-device"]
use_rtt = ["atsamd-hal/use_rtt"]
# Enable pins for the radio on "RadioFruits" with RFM95, RFM96, RFM69
dma = ["atsamd-hal/dma"]
rfm = []
# Enable pins for the flash and neopixel on the Feather M0 Express
express = []
max-channels = ["dma", "atsamd-hal/max-channels"]
# Enable async support from atsamd-hal
async = ["atsamd-hal/async"]
# Enable pins for the adalogger SD card reader
adalogger = []
rtic = ["dep:rtic", "atsamd-hal/rtic"]
sdmmc = ["embedded-sdmmc", "atsamd-hal/sdmmc"]
use_semihosting = []
# Enable pins for Feather with WINC1500 wifi
winc = []

# Above is a bit of a mess, here is the new stuff:
feather_m0 = []
metro_m0 = []