[package]
name = "usb-echo"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7"
panic-halt = "0.2"
usb-device = "0.3.1"
usbd-serial = "0.2"

[dependencies.samd21_boards]
optional = true
path = "../../boards/samd21_boards"
features = ["usb"]

[dependencies.feather_m4]
optional = true
path = "../../boards/feather_m4"
features = ["usb"]

[features]
default = []

# IUO
m0 = []
m4 = []

metro_m0 = ["dep:samd21_boards", "samd21_boards/metro_m0", "m0"]
feather_m0 = ["dep:samd21_boards", "samd21_boards/feather_m0", "m0"]
feather_m4 = ["dep:feather_m4", "m4"]
